Weeeeeeeee, j'ai oublié lol

--- a/src/main/resources/translations/messages_fr.properties
+++ b/src/main/resources/translations/messages_fr.properties
@@ -1,3 +1,4 @@
-morpion="TicTacToe"
-taquin="Magic15"
-puissance4="Connect4"
+Game.TicTacToe.name=Morpion
+Game.ConnectFour.name=Puissance 4
+Game.Taquin.name=Taquin
+
